--- a/ecomm/products/package.json
+++ b/ecomm/products/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack serve"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +12,11 @@
   "dependencies": {
     "faker": "^4.1.0",
     "html-webpack-plugin": "5.5.0",
-    "nodemon": "^2.0.15",
-    "webpack": "^5.88.0",
-    "webpack-cli": "4.10.0",
-    "webpack-dev-server": "^5.2.3"
+    "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "webpack": "^5.105.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2"
   }
 }
