--- a/ecomm/container/package.json
+++ b/ecomm/container/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "html-webpack-plugin": "5.5.0",
-    "nodemon": "^2.0.15",
-    "webpack": "^5.88.0",
-    "webpack-cli": "4.10.0",
-    "webpack-dev-server": "^5.2.3"
+    "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "webpack": "^5.105.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2"
   }
 }
